  entry.

o You can now drag a hit from the global finder and drop it on an open guide
  window and that window will be reused to display the hit.

o The menus and the credits in open guide windows are now fully refreshed
  when you modify the guide preferences. This has the effect of ensuring
  that the menus and the credits are reread with the latest OEMToANSI
  setting.

Changes since v2.12
===================

o Added a help menu item for viewing README.txt

o Added a help menu item for viewing CHANGES.txt.

o The toolbar configuration of each of the guide windows is now saved and
  restored between WEG sessions.

o Added the ability to copy just the highlighted line of an entry to the
  clipboard.

o Added a copy button to the guide information dialog so that you can copy
  a guide's credits to the clipboard.

Changes since v2.11
===================

o Changed the in-entry finder so that the find dialog retains focus when the
  find button is pressed.

o When a guide name is provided on the command line or via DDE and it
  doesn't have a path attached and it isn't in whatever Windows thinks is
  the current directory the file will be looked for in the default guide
  directory.

o Re-worked the DDE macros that deal with the global search window to make
  controlling searches a lot more flexible. Please note that this isn't a
  backward compatible change. See README.txt for details of the new macros.

o DDE support now handles multi-line macros.

Changes since v2.10
===================

o Added a panel to the guide window status bar that shows if the entry
  you're viewing is a short or a long.

o Added "Home" navigation to the guide window. This takes you to the first
  entry in a guide.

o Added a "Focus When Finished" option to the global finder window. When set
  the global finder will display itself and grab focus when a find operation
  has finished.

o Added optional colour printing.
